# aisbf

./: .gitignore  .providers.json.swp  =0.5.0  ADMIN_SETTINGS_CLARIFICATION.md  ADMIN_SETTINGS_COMPLETE.md  AI.PROMPT  ANALYTICS_FIX.md  API_EXAMPLES.md  BUILD_DEPLOY.md  CHANGELOG.md  CHANGES.md  CLAUDE_OAUTH2_DEEP_DIVE.md  CLAUDE_OAUTH2_SETUP.md  COMPLETE_SESSION_SUMMARY.md  COMPLETE_SUMMARY.md  CRITICAL_FIX_TEMPLATE.md  DATABASE_MIGRATION.md  DEBUG_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DOCUMENTATION.md  DOCUMENTATION.md~  ENDPOINTS.md  FINAL_COMPLETE_SESSION_SUMMARY.md  FINAL_REPORT.md  FINAL_REPORT.txt  FINAL_SESSION_SUMMARY.md  FINAL_STATUS.md  FINAL_SUMMARY_v0.99.26.txt  IMPLEMENTATION_NOTES.md  KILO_OAUTH2.md  KIRO_GATEWAY.md  KIRO_INTEGRATION.md  MANIFEST.in  MIGRATION_FIXES.md  MISSING_ENDPOINTS.md  MISSING_HP_KEYS.txt  MYSQL_MIGRATION_FIX.md  PAYMENT_GATEWAY_ISSUE_ANALYSIS.md  PAYMENT_INSTALLATION.md  (+111 more)
aisbf/: __init__.py  __init__.py~  aisbf.sh  analytics.py  batching.py  cache.py  classifier.py  claude_auth.py  coderai_broker.py  coderai_registry.py  config.py  config.py~  context.py  cost_extractor.py  database.py  email_utils.py  geolocation.py  handlers.py  handlers.py~  kilo_oauth2.py  kiro_auth.py  kiro_converters.py  kiro_converters_openai.py  kiro_models.py  mcp.py  models.py  models.py~  prompt_analysis.py  providers.py  providers.py~  response_cache.py  semantic_classifier.py  streaming_optimization.py  studio.py  studio_adapters.py  studio_services.py  tor.py  utils.py
config/: STUDIO_SYSTEM.md  aisbf.json  autoselect.json  autoselect.md  condensation_conversational.md  condensation_semantic.md  providers.json  rotations.json
docs/: claude_provider_comparison.md  claude_provider_improvement_plan.md  claude_provider_improvements.md  coderai-integration.md  (+4 more)
(+232 files in other folders)
