[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aisbf"
version = "0.99.9"
description = "AISBF - AI Service Broker Framework || AI Should Be Free - A modular proxy server for managing multiple AI provider integrations"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
authors = [
    {name = "AISBF Contributors"},
]
maintainers = [
    {name = "Stefy Lanza", email = "stefy@nexlab.net"},
]
keywords = [
    "ai",
    "proxy",
    "api",
    "openai",
    "anthropic",
    "google",
    "ollama",
    "llm",
    "chat",
    "broker",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "scripts"]

[project.urls]
Homepage = "https://git.nexlab.net/nexlab/aisbf.git"
Repository = "https://git.nexlab.net/nexlab/aisbf.git"
Documentation = "https://git.nexlab.net/nexlab/aisbf.git"
"Bug Tracker" = "https://git.nexlab.net/nexlab/aisbf.git/issues"

[tool.setuptools]
packages = ["aisbf", "aisbf.auth", "aisbf.providers", "aisbf.providers.kiro"]
# Note: Provider handler modules (base, google, openai, anthropic, claude, kilo, ollama, codex) are in aisbf.providers package
py-modules = ["cli"]

[tool.setuptools.package-data]
aisbf = ["*.json", "streaming_optimization.py"]
